PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2005-11-01: - Critical epochs fully implemented. The program now computes
              the periastron passage phase, phases of superior and inferior
              conjunctions (the positions of minima) and phases of the
              ascending and descending nodes (the positions of maxima).
              This was incorporated on suggestion by Petr Harmanec.
            - Surface tab was a bit overcrowded due to the overwhelming
              space devoted to spots. Fixed.
            - PHOEBE 0.28 released!
2005-10-20: - Warning message for the invalid filter passband lacked a
              newline in the end of the line. Fixed.
2005-10-18: - Upper limit for the semi-major axis changed from 1000.0 to
              100000.0 RSun.
2005-10-15: - Labels "Experimental light curve" and "Experimental RV curve"
              changed to "Observed light curve" and "Observed RV curve" in
              plotting windows. The same has been done for all error-repor-
              ting windows.
2005-09-02: - Limb darkening coefficient interpolation didn't work for nega-
              tive values of metallicities due to a silly if-clause that
              rejected any parameters smaller than 0.0. Fixed. Many thanks
              to Janusz Kaluzny for pointing this out!
2005-08-30: - Constraints set for a double-contact binary were too strict:
              T2, A2 and GR2 can in fact be different from their primary
              star counterparts. Fixed.
2005-05-30: - Computing residuals in both LC and RV windows was done before
              aliasing took place, which meant that the residuals were com-
	      puted against the original (i.e. non-aliased) data. This in
	      turn meant that the phases were out-of-sync between aliased
	      data and residuals. This is now fixed. Many thanks to Keivan
	      Stassun for pointing this out!